Refactor: 체계적인 커널 파라미터 설정 구조
- baseline: 24ms (기본값)
- low_latency: 3ms (1/8배, 응답성 우선)
- high_throughput: 48ms (2배, 처리량 우선)
- balanced: 12ms (1/2배, 균형)
- minimal_migration: baseline + migration 10배

모든 설정이 baseline을 기준으로 명확한 비율 적용

--- a/CFS/configs/minimal_migration.conf
+++ b/CFS/configs/minimal_migration.conf
@@ -1,11 +1,10 @@
-# 마이그레이션 최소화 설정
-# 캐시 효율성 향상에 집중
+# CPU 마이그레이션 최소화
+# 캐시 지역성 향상, CPU 친화성 강화
 
-SCHED_LATENCY_NS=24000000          # 24ms - 기본 유지
-SCHED_MIN_GRANULARITY_NS=3000000   # 3ms - 기본 유지
-SCHED_WAKEUP_GRANULARITY_NS=1000000 # 1ms - 기본 유지
-SCHED_MIGRATION_COST_NS=5000000    # 5ms - 마이그레이션 억제
+SCHED_LATENCY_NS=24000000           # 24ms
+SCHED_MIN_GRANULARITY_NS=3000000    # 3ms
+SCHED_WAKEUP_GRANULARITY_NS=4000000 # 4ms
+SCHED_MIGRATION_COST_NS=5000000     # 5ms (마이그레이션 억제)
 
-# 설정 설명
-DESCRIPTION="마이그레이션 최소화 - CPU migration↓, 캐시효율↑"
-
+DESCRIPTION="마이그레이션 최소화 - 캐시 지역성↑, CPU 친화성↑"
+CONFIG_NAME="minimal_migration"
