--- a/CFS/configs/high_throughput.conf
+++ b/CFS/configs/high_throughput.conf
@@ -1,11 +1,10 @@
-# 높은 처리량 최적화 설정
-# 전체 처리량 최대화에 집중
+# 높은 처리량 최적화
+# Context switch 최소화, 처리량 극대화
 
-SCHED_LATENCY_NS=24000000          # 24ms - 긴 선점 주기
-SCHED_MIN_GRANULARITY_NS=3000000   # 3ms - 큰 세분성
-SCHED_WAKEUP_GRANULARITY_NS=4000000 # 4ms - 선점 억제
-SCHED_MIGRATION_COST_NS=500000     # 0.5ms - 기본 유지
+SCHED_LATENCY_NS=48000000           # 48ms (처리량↑)
+SCHED_MIN_GRANULARITY_NS=6000000    # 6ms
+SCHED_WAKEUP_GRANULARITY_NS=8000000 # 8ms
+SCHED_MIGRATION_COST_NS=2000000     # 2ms
 
-# 설정 설명
-DESCRIPTION="높은 처리량 - RPS↑, Context switch↓"
-
+DESCRIPTION="높은 처리량 - Context switch↓, 처리량↑"
+CONFIG_NAME="high_throughput"
