--- a/CFS/configs/low_latency.conf
+++ b/CFS/configs/low_latency.conf
@@ -1,11 +1,10 @@
-# 낮은 레이턴시 최적화 설정
-# 응답 시간 최소화에 집중
+# 낮은 레이턴시 최적화
+# 응답 시간을 최소화, Context switch 증가 허용
 
-SCHED_LATENCY_NS=3000000           # 3ms - 매우 짧은 선점 주기
-SCHED_MIN_GRANULARITY_NS=500000    # 0.5ms - 매우 작은 세분성
-SCHED_WAKEUP_GRANULARITY_NS=500000 # 0.5ms - 빠른 깨우기 선점
-SCHED_MIGRATION_COST_NS=500000     # 0.5ms - 기본 유지
+SCHED_LATENCY_NS=3000000            # 3ms (응답성↑)
+SCHED_MIN_GRANULARITY_NS=500000     # 0.5ms
+SCHED_WAKEUP_GRANULARITY_NS=500000  # 0.5ms
+SCHED_MIGRATION_COST_NS=500000      # 0.5ms
 
-# 설정 설명
 DESCRIPTION="낮은 레이턴시 - 응답시간↓, Context switch↑"
-
+CONFIG_NAME="low_latency"
