Update EEVDF config files and add network benchmarks
- Update all EEVDF config files: CFS parameters -> EEVDF parameters
  (BASE_SLICE_NS, MIGRATION_COST_NS, NR_MIGRATE)
- Add network advanced benchmark scripts:
  * run_network_advanced_eevdf.sh: Single network test
  * run_network_advanced_configs_eevdf.sh: Compare across configs
- Update common.sh: Use dynamic path instead of hardcoded
- Update run_with_config_eevdf.sh: Use EEVDF debugfs paths
- Add PPT reference materials

--- a/EEVDF/configs/balanced.conf
+++ b/EEVDF/configs/balanced.conf
@@ -1,11 +1,8 @@
-# 균형잡힌 설정
-# 레이턴시와 처리량의 균형
+# EEVDF 균형 설정
 
-SCHED_LATENCY_NS=12000000           # 12ms (균형)
-SCHED_MIN_GRANULARITY_NS=1500000    # 1.5ms
-SCHED_WAKEUP_GRANULARITY_NS=2000000 # 2ms
-SCHED_MIGRATION_COST_NS=1000000     # 1ms
+BASE_SLICE_NS=1500000         # 1.5ms
+MIGRATION_COST_NS=750000      # 0.75ms
+NR_MIGRATE=24
 
 DESCRIPTION="균형 설정 - 레이턴시와 처리량 균형"
 CONFIG_NAME="balanced"
-
