--- a/EEVDF/configs/low_latency.conf
+++ b/EEVDF/configs/low_latency.conf
@@ -1,11 +1,8 @@
-# 낮은 레이턴시 최적화
-# 응답 시간을 최소화, Context switch 증가 허용
+# EEVDF 낮은 레이턴시 설정
 
-SCHED_LATENCY_NS=3000000            # 3ms (응답성↑)
-SCHED_MIN_GRANULARITY_NS=500000     # 0.5ms
-SCHED_WAKEUP_GRANULARITY_NS=500000  # 0.5ms
-SCHED_MIGRATION_COST_NS=500000      # 0.5ms
+BASE_SLICE_NS=750000          # 0.75ms (작은 타임슬라이스)
+MIGRATION_COST_NS=100000      # 0.1ms (빠른 마이그레이션)
+NR_MIGRATE=64                 # 높은 마이그레이션 허용
 
-DESCRIPTION="낮은 레이턴시 - 응답시간↓, Context switch↑"
+DESCRIPTION="낮은 레이턴시 설정 - 빠른 응답"
 CONFIG_NAME="low_latency"
-
