--- a/EEVDF/configs/baseline.conf
+++ b/EEVDF/configs/baseline.conf
@@ -1,11 +1,8 @@
-# 기본 설정 (Baseline)
-# 시스템 기본값 사용
+# EEVDF 기본 설정 (시스템 기본값)
 
-SCHED_LATENCY_NS=24000000           # 24ms (기본값)
-SCHED_MIN_GRANULARITY_NS=3000000    # 3ms
-SCHED_WAKEUP_GRANULARITY_NS=4000000 # 4ms
-SCHED_MIGRATION_COST_NS=500000      # 0.5ms
+BASE_SLICE_NS=2250000         # 2.25ms
+MIGRATION_COST_NS=500000      # 0.5ms
+NR_MIGRATE=32
 
-DESCRIPTION="기본 설정 (Baseline)"
+DESCRIPTION="기본 설정 - 시스템 기본값"
 CONFIG_NAME="baseline"
-
