--- a/EEVDF/configs/high_throughput.conf
+++ b/EEVDF/configs/high_throughput.conf
@@ -1,11 +1,8 @@
-# 높은 처리량 최적화
-# Context switch 최소화, 처리량 극대화
+# EEVDF 높은 처리량 설정
 
-SCHED_LATENCY_NS=48000000           # 48ms (처리량↑)
-SCHED_MIN_GRANULARITY_NS=6000000    # 6ms
-SCHED_WAKEUP_GRANULARITY_NS=8000000 # 8ms
-SCHED_MIGRATION_COST_NS=2000000     # 2ms
+BASE_SLICE_NS=6000000         # 6ms (큰 타임슬라이스)
+MIGRATION_COST_NS=2000000     # 2ms (마이그레이션 억제)
+NR_MIGRATE=8                  # 낮은 마이그레이션
 
-DESCRIPTION="높은 처리량 - Context switch↓, 처리량↑"
+DESCRIPTION="높은 처리량 설정 - 배치 작업용"
 CONFIG_NAME="high_throughput"
-
