--- a/EEVDF/configs/minimal_migration.conf
+++ b/EEVDF/configs/minimal_migration.conf
@@ -1,11 +1,8 @@
-# CPU 마이그레이션 최소화
-# 캐시 지역성 향상, CPU 친화성 강화
+# EEVDF 마이그레이션 최소화 설정
 
-SCHED_LATENCY_NS=24000000           # 24ms
-SCHED_MIN_GRANULARITY_NS=3000000    # 3ms
-SCHED_WAKEUP_GRANULARITY_NS=4000000 # 4ms
-SCHED_MIGRATION_COST_NS=5000000     # 5ms (마이그레이션 억제)
+BASE_SLICE_NS=2250000         # 2.25ms (기본)
+MIGRATION_COST_NS=5000000     # 5ms (높은 비용)
+NR_MIGRATE=4                  # 최소 마이그레이션
 
-DESCRIPTION="마이그레이션 최소화 - 캐시 지역성↑, CPU 친화성↑"
+DESCRIPTION="마이그레이션 최소화 - NUMA/캐시 효율"
 CONFIG_NAME="minimal_migration"
-
